--- a/assets/index.html
+++ b/assets/index.html
@@ -24,22 +24,22 @@
  </head>
  <body>
   <main><h1 id="wikidata-jskos-service">Wikidata JSKOS Service</h1>
-<p>This web service provides access to content from <a href="https://www.wikidata.org/">Wikidata</a> in <a href="https://gbv.github.io/jskos/jskos.html">JSKOS format</a>. The API is aligned with <a href="https://github.com/gbv/jskos-server">JSKOS Server</a> and may later be specified as &quot;JSKOS API&quot;.</p>
-<h2 id="examples">Examples</h2>
+<p>This web service provides access to content from <a href="https://www.wikidata.org/">Wikidata</a> in <a href="https://gbv.github.io/jskos/jskos.html">JSKOS format</a>. The API is aligned with <a href="https://github.com/gbv/jskos-server">JSKOS Server</a>.</p>
+<h2 id="sample-queries">Sample Queries</h2>
 <h3 id="concepts">Concepts</h3>
 <ul>
-<li><a href="data/?uri=http://www.wikidata.org/entity/Q42">data?uri=http://www.wikidata.org/entity/Q42</a></li>
-</ul>
-<h3 id="mapping-schemes">Mapping Schemes</h3>
-<ul>
-<li><a href="voc">voc</a></li>
+<li><a href="concept?uri=http://www.wikidata.org/entity/Q42">concept?uri=http://www.wikidata.org/entity/Q42</a></li>
 </ul>
 <h3 id="mappings">Mappings</h3>
 <ul>
-<li><a href="mappings?from=http://www.wikidata.org/entity/Q2013">?from=http://www.wikidata.org/entity/Q2013</a></li>
-<li><a href="mappings?to=http://d-nb.info/gnd/7527800-5">?to=http://d-nb.info/gnd/7527800-5</a></li>
-<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">?direction=both&amp;mode=and&amp;from=http://Fwww.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
-<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">?direction=both&amp;mode=or&amp;from=http://Fwww.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings?from=http://www.wikidata.org/entity/Q2013">mappings?from=http://www.wikidata.org/entity/Q2013</a></li>
+<li><a href="mappings?to=http://d-nb.info/gnd/7527800-5">mappings?to=http://d-nb.info/gnd/7527800-5</a></li>
+<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=and&amp;from=http://Fwww.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=or&amp;from=http://Fwww.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+</ul>
+<h3 id="concept-schemes">Concept Schemes</h3>
+<ul>
+<li><a href="mappings/voc">mappings/voc</a></li>
 </ul>
 <h2 id="source-code">Source Code</h2>
 <p>See <a href="https://github.com/gbv/wikidata-jskos/">https://github.com/gbv/wikidata-jskos/</a>.</p>
