Include suggest endpoint (#20)

--- a/assets/index.html
+++ b/assets/index.html
@@ -41,6 +41,10 @@
 <ul>
 <li><a href="mappings/voc">mappings/voc</a></li>
 </ul>
+<h3 id="suggest-search">Suggest Search</h3>
+<ul>
+<li><a href="suggest?search=G%C3%B6ttingen&amp;language=de">suggest?search=Göttingen&amp;language=de</a></li>
+</ul>
 <h2 id="source-code">Source Code</h2>
 <p>See <a href="https://github.com/gbv/wikidata-jskos/">https://github.com/gbv/wikidata-jskos/</a>.</p>
 <h2 id="license">License</h2>
