Implement lookup of all mappings to a given scheme
Closes #33.

--- a/assets/index.html
+++ b/assets/index.html
@@ -34,8 +34,9 @@
 <ul>
 <li><a href="mappings?from=http://www.wikidata.org/entity/Q2013">mappings?from=http://www.wikidata.org/entity/Q2013</a></li>
 <li><a href="mappings?to=http://d-nb.info/gnd/7527800-5">mappings?to=http://d-nb.info/gnd/7527800-5</a></li>
-<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=and&amp;from=http://Fwww.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
-<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=or&amp;from=http://Fwww.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=and&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings?toScheme=http://bartoc.org/en/node/18785">mappings?toScheme=http://bartoc.org/en/node/18785</a></li>
 </ul>
 <h3 id="concept-schemes">Concept Schemes</h3>
 <ul>
