--- a/assets/index.html
+++ b/assets/index.html
@@ -34,8 +34,8 @@
 <ul>
 <li><a href="mappings?from=http://www.wikidata.org/entity/Q2013">mappings?from=http://www.wikidata.org/entity/Q2013</a></li>
 <li><a href="mappings?to=http://d-nb.info/gnd/7527800-5">mappings?to=http://d-nb.info/gnd/7527800-5</a></li>
-<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=and&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
-<li><a href="mappings/?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings/?direction=both&mode=or&from=http://www.wikidata.org/entity/Q42395&to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=and&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
+<li><a href="mappings/?direction=both&mode=or&from=http://www.wikidata.org/entity/Q42395&to=http://d-nb.info/gnd/4074195-3">mappings?direction=both&amp;mode=or&amp;from=http://www.wikidata.org/entity/Q42395&amp;to=http://d-nb.info/gnd/4074195-3</a></li>
 <li><a href="mappings?toScheme=http://bartoc.org/en/node/18785">mappings?toScheme=http://bartoc.org/en/node/18785</a></li>
 </ul>
 <h3 id="concept-schemes">Concept Schemes</h3>
@@ -44,7 +44,7 @@
 </ul>
 <h3 id="suggest-search">Suggest Search</h3>
 <ul>
-<li><a href="suggest?search=G%C3%B6ttingen&amp;language=de">suggest?search=Göttingen&amp;language=de</a></li>
+<li><a href="suggest?search=G%C3%B6ttingen&language=de">suggest?search=Göttingen&amp;language=de</a></li>
 </ul>
 <h2 id="source-code">Source Code</h2>
 <p>See <a href="https://github.com/gbv/wikidata-jskos/">https://github.com/gbv/wikidata-jskos/</a>.</p>
